[workspace]
members = ["src/oracle/oracle_contract"]

[package]
name = "hashirwa_contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"
cw-storage-plus = "0.13.3"  
schemars = "0.8.10"         

[dev-dependencies]
cw-multi-test = "0.13.4"
