[workspace]

[package]
name = "hashirwa_contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.8.10"    
cw-controllers = { version = "0.13.3"}
semver = { version = "0.11.0"}
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cosmwasm-schema = "1.1.5"
cosmwasm-std = "1.1.5"
cw-storage-plus = "0.16.0"
thiserror = "1.0.31"
hex = "0.3.2"
sha2 = "0.8.2"

[dev-dependencies]
cw-multi-test = { version = "0.13", features = ["staking"] }  # Ensure this matches the version of CosmWasm you are using
