[package]
name = "oracle_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.24"
bincode = "1.3.3"

[lib]
crate-type = ["cdylib"]  